feat: api and documentation order
