# back-end-acara/src/controllers/order.controller.ts
@@ -85,7 +85,47 @@ export default {
             response.error(res, error, 'failed to find one order');
         }
     },
-    async findAllByMember(req: IReqUser, res: Response) { },
+    async findAllByMember(req: IReqUser, res: Response) {
+        try {
+            const userId = req.user?.id;
+            const buildQuery = (filter: any) => {
+                let query: FilterQuery<TypeOrder> = {
+                    createdBy: userId
+                };
+
+                if (filter.search) query.$text = { $search: filter.search };
+
+                return query;
+            };
+
+            const {
+                limit = 10,
+                page = 1,
+                search,
+            } = req.query;
+
+            const query = buildQuery({
+                search
+            });
+
+            const result = await OrderModel.find(query)
+                .limit(+limit)
+                .skip((+page - 1) * +limit)
+                .sort({ createdAt: -1 })
+                .lean()
+                .exec();
+
+            const count = await OrderModel.countDocuments(query);
+
+            response.pagination(res, result, {
+                total: count,
+                totalPages: Math.ceil(count / +limit),
+                current: +page,
+            }, "Success find all orders")
+        } catch (error) {
+            response.error(res, error, 'Failed Find All orders')
+        }
+    },
 
     async complete(req: IReqUser, res: Response) {
         try {
@@ -94,7 +134,7 @@ export default {
 
             const order = await OrderModel.findOne({
                 orderId,
-                cratedBy: userId
+                createdBy: userId
             });
 
             if (!order) return response.notFound(res, 'order not found');
@@ -109,7 +149,7 @@ export default {
 
             const result = await OrderModel.findOneAndUpdate({
                 orderId,
-                cratedBy: userId,
+                createdBy: userId,
             }, {
                 vouchers,
                 status: OrderStatus.COMPLETED,
@@ -132,6 +172,26 @@ export default {
     },
     async pending(req: IReqUser, res: Response) {
         try {
+            const { orderId } = req.params;
+            const userId = req.user?.id;
+
+            const order = await OrderModel.findOne({
+                orderId
+            });
+
+            if (!order) return response.notFound(res, 'order not found');
+
+            if (order.status === OrderStatus.COMPLETED) {
+                return response.error(res, null, 'this order has been completed');
+            }
+
+            if (order.status === OrderStatus.PENDING) {
+                return response.error(res, null, 'this order currently in payment pending');
+            }
+
+            const result = await OrderModel.findOneAndUpdate({ orderId }, { status: OrderStatus.PENDING }, { new: true })
+
+            response.success(res, result, "success to pending an order")
 
         } catch (error) {
             response.error(res, error, 'failed to pending an order')
@@ -139,9 +199,50 @@ export default {
     },
     async cancelled(req: IReqUser, res: Response) {
         try {
+            const { orderId } = req.params;
+            const userId = req.user?.id;
 
+            const order = await OrderModel.findOne({
+                orderId
+            });
+
+            if (!order) return response.notFound(res, 'order not found');
+
+            if (order.status === OrderStatus.COMPLETED) {
+                return response.error(res, null, 'this order has been completed');
+            }
+
+            if (order.status === OrderStatus.CANCELLED) {
+                return response.error(res, null, 'this order currently in payment cancelled');
+            }
+
+            const result = await OrderModel.findOneAndUpdate({ orderId }, { status: OrderStatus.CANCELLED }, { new: true })
+
+            response.success(res, result, "success to cancelled an order")
         } catch (error) {
             response.error(res, error, 'failed to cancel an order')
         }
     },
+    async remove(req: IReqUser, res: Response) {
+        try {
+            const { orderId } = req.params;
+            const result = await OrderModel.findOneAndDelete(
+                {
+                    orderId,
+                },
+                {
+                    new: true,
+                }
+            )
+
+            if (!result) {
+                return response.notFound(res, "Order Not Found");
+            }
+
+            response.success(res, result, "success to remove an Order")
+
+        } catch (error) {
+            response.error(res, error, 'failed to remove an order')
+        }
+    }
 }
